tests/lean/renameSelf.lean.expected.out
renameSelf.lean:4:2-4:22: error: failed to find a hypothesis with type
  P ↔ Q
